<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
        <PreferenceCategory android:title="@string/pref_header_general">
            <Preference
                android:key="@string/key_set_up"
                android:summary="@string/summary_set_up"
                android:title="@string/title_set_up" />

            <Preference
                android:key="@string/key_set_emergency"
                android:summary="@string/summary_set_emergency"
                android:title="@string/title_set_emergency" />

            <ListPreference
                android:defaultValue="dd/MM/yyyy HH:mm:ss"
                android:dialogTitle="@string/title_date_format"
                android:entries="@array/notification_info_date_format"
                android:entryValues="@array/notification_info_date_format_values"
                android:key="@string/key_date_format"
                android:summary="@string/summary_date_format"
                android:title="@string/title_date_format" />
            <Preference
                android:key="@string/key_send_logs"
                android:summary="@string/summary_send_logs"
                android:title="@string/title_send_logs" />
            <Preference
                android:key="@string/key_device_admin"
                android:summary="@string/summary_device_admin"
                android:title="@string/title_device_admin" />
        </PreferenceCategory>

        <PreferenceCategory android:title="@string/pref_header_connections">
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="@string/key_activate_threshold"
                android:summary="@string/summary_activate_threshold"
                android:title="@string/title_activate_threshold" />
        </PreferenceCategory>

        <PreferenceCategory android:title="@string/pref_title_notifications">
            <SwitchPreference
                android:defaultValue="true"
                android:key="@string/key_force_ringtone"
                android:summary="@string/summary_force_ringtone"
                android:title="@string/title_force_ringtone" />

            <SwitchPreference
                android:defaultValue="true"
                android:key="@string/key_keep_app_open"
                android:summary="@string/summary_keep_app_open"
                android:title="@string/title_keep_app_open" />
        </PreferenceCategory>

        <PreferenceCategory android:title="@string/pref_header_about">
            <Preference
                android:summary="@string/InsiteMobileVersion"
                android:title="@string/title_version" />

            <Preference
                android:key="@string/key_send_feedback"
                android:summary="@string/summary_support"
                android:title="@string/title_send_feedback" />

            <!-- preference opens url in browser -->
            <Preference
                android:summary="@string/summary_about_us"
                android:title="@string/title_about_us">
                <intent
                    android:action="android.intent.action.VIEW"
                    android:data="@string/url_about_us" />
            </Preference>
        </PreferenceCategory>
</PreferenceScreen>